fixed margin on h3's to allow scroll feature to work without covering that bit of content. Ready to be resubmitted

--- a/styles.css
+++ b/styles.css
@@ -103,13 +103,14 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	color: #515C96;
+	color: #515C96;	
 }
 
 .about {
 	background-color: white;
 	max-width: 800px;
 	min-width: 400px;
+	margin-top: 60px;
 }
 .about-content {
 	background-color: rgba(81, 92, 150, 0.08);
@@ -180,6 +181,7 @@ main {
  a:hover {
 	text-decoration: underline;
  }
+ 
 .project-btn {
 	background-color: rgba(81, 92, 150, 0.08);
 	width: 125px;
@@ -245,7 +247,8 @@ h3 {
 	font-size: 30px;
 	font-family: 'Montserrat', sans-serif; 
 	font-weight: 600;
-	margin: 10px 0;
+	margin: 80px 0 10px 0;
+
 }
 
 h4 {
